--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,10 +7,12 @@
       "@/models": ["./src/models"],
       "@/services": ["./src/services"],
       "@/views": ["./src/views"],
-      "@/atomic/element": ["./global/atomic/element"],
-      "@/atomic/component": ["./global/atomic/component"],
-      "@/atomic/design": ["./global/atomic/design"]
+      "@/global/*": ["./global/*"],
+      "@/atomic/element": ["./atomic/element"],
+      "@/atomic/component": ["./atomic/component"],
+      "@/atomic/design": ["./atomic/design"]
     },
     "strict": true
-  }
+  },
+  "typeRoots": ["./types"]
 }
