--- a/package.json
+++ b/package.json
@@ -1,31 +1,34 @@
 {
-  "name": "login-sign-up",
+  "name": "expo-login-sign-up",
   "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
-   "keywords": [
+  "keywords": [
     "Expo",
     "Formik",
     "Tailwind",
     "NativeWind",
     "Typescript",
-    "YupJs",
+    "YupJs"
   ],
   "homepage": "https://www.piguavesof.com",
   "demo": "",
   "author": {
     "name": "Jean Carlos Piguave Alvarado",
     "email": "piguavejc@gmail.com",
-    "url": "https://github.com/jean-carlos-19"
+    "url": "https://piguavesof.com"
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/jean-carlos-19/login-sign-up-expo.git"
+    "url": "https://github.com/jean-carlos-19/expo-login-sign-up"
   },
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint src/**/*.{js,jsx,ts,tsx,json}",
+    "lint:fix": "eslint --fix src/**/*.{js,jsx,ts,tsx,json}",
+    "format": "prettier --write src/**/*.{js,jsx,ts,tsx,css,md,json,scss} --config ./.prettier.json"
   },
   "dependencies": {
     "@react-navigation/native": "^6.1.7",
@@ -33,6 +36,8 @@
     "expo": "~48.0.18",
     "expo-constants": "~14.2.1",
     "expo-status-bar": "~1.4.4",
+    "firebase": "^10.3.0",
+    "formik": "^2.4.3",
     "nativewind": "^2.0.11",
     "react": "18.2.0",
     "react-native": "0.71.8",
@@ -40,13 +45,23 @@
     "react-native-heroicons": "^3.2.0",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "~3.20.0",
-    "react-native-svg": "13.4.0"
+    "react-native-svg": "13.4.0",
+    "yup": "^1.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
     "@types/react": "~18.0.14",
+    "@typescript-eslint/eslint-plugin": "^6.4.1",
+    "@typescript-eslint/parser": "^6.4.1",
     "babel-plugin-module-resolver": "^5.0.0",
-    "tailwindcss": "^3.3.2",
+    "eslint": "^8.48.0",
+    "eslint-config-prettier": "^9.0.0",
+    "eslint-plugin-prettier": "^5.0.0",
+    "eslint-plugin-react": "^7.33.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-native": "^4.0.0",
+    "prettier": "^3.0.2",
+    "tailwindcss": "3.3.2",
     "typescript": "^4.9.4"
   },
   "private": true
